Fixed issues running against PROD

--- a/application.PROD.properties
+++ b/application.PROD.properties
@@ -6,3 +6,7 @@ sts_mode=local
 ## alias to use in different modes - can be the same depending on registered permissions
 #alias_local=ABRD:27809366375_USIMachine
 #alias_cloud=ABRD:11000002568_INGLETON153
+
+#keystore=keystore/prod.xml
+#alias_local=...
+#alias_cloud=...
