Don't commit generated source to repo

--- a/.gitignore
+++ b/.gitignore
@@ -1158,6 +1158,10 @@ obj/
 *.zip
 *.tar
 
+appgen.properties
+srcv3/au
+srcv4/au
+
 # ant build.xml puts prepare/compile/jar outputs in target...
 target
 targetv3
