Clarifications in README

--- a/application.PROD.properties
+++ b/application.PROD.properties
@@ -7,6 +7,6 @@ sts_mode=local
 #alias_local=ABRD:27809366375_USIMachine
 #alias_cloud=ABRD:11000002568_INGLETON153
 
-#keystore=keystore/prod.xml
-#alias_local=...
+keystore=keystore/prod.xml
+alias_local=ABRD:99999999990_CredentialName
 #alias_cloud=...
